# AI-in-Motion-Foundations-of-Physical-AI-and-Humanoid-Robotics

./: .gitignore  CONTRIBUTING.md  CURRICULUM_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  book_ui.html  docusaurus.config.js  package-lock.json  package.json  setup_dev_env.sh  sidebars.js  tasks.md  test_page.html
.claude/: settings.local.json
.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.specify/memory/: constitution.md
ai_in_motion_ws/src/ai_motion_common_msgs/: CMakeLists.txt
ai_in_motion_ws/src/ai_motion_common_msgs/action/: NavigateToPose.action
ai_in_motion_ws/src/ai_motion_common_msgs/ai_motion_common_msgs/: __init__.py  config_manager.py  hardware_abstraction.py  navigation_goal.py  robot_state.py  sensor_data.py  transform_utils.py  urdf_loader.py  voice_command.py
ai_in_motion_ws/src/ai_motion_common_msgs/msg/: IntentClassification.msg  NavigationGoal.msg  RobotState.msg  SensorData.msg  VoiceCommand.msg
ai_in_motion_ws/src/ai_motion_common_msgs/srv/: ProcessVoiceCommand.srv
ai_in_motion_ws/src/ai_motion_module1/: CMakeLists.txt  setup.py
ai_in_motion_ws/src/ai_motion_module1/ai_motion_module1/: __init__.py  joint_control_demo.py  joint_control_node.py  joint_service.py  joint_state_publisher.py  topic_demo.py
ai_in_motion_ws/src/ai_motion_module1/launch/: module1_demo.launch.py
ai_in_motion_ws/src/ai_motion_module1/srv/: SetJointPositions.srv
ai_in_motion_ws/src/ai_motion_module1/test/: test_joint_control.py
ai_in_motion_ws/src/ai_motion_module2/: CMakeLists.txt  setup.py
backend/: README.md  demo_pipeline.py  demo_qdrant_cloud.py  main.py  requirements.txt  tasks.md  test_core_functions.py  test_pipeline.py  test_qdrant.py
blog/: first-post.md
config/: unity_ros_bridge_config.json
docs/: conclusion.md  intro.md
docs/capstone/: assessment.md  exercises.md  integration.md  intro.md
docs/module1/: exercises.md  intro.md  nodes-topics-services.md  ros-basics.md  urdf.md
docs/module2/: exercises.md  gazebo-simulation.md  integration.md  intro.md  sensors.md  unity-visualization.md
docs/module3/: exercises.md  integration.md  intro.md  isaac-sim.md  navigation.md  vslam.md
docs/module4/: cognitive-planning.md  exercises.md  integration.md  intro.md  voice-processing.md
my-website/: docusaurus.config.js  package-lock.json  package.json  vercel.json
my-website/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx
specs/1-embedding-pipeline/: spec.md
specs/ai-in-motion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/css/: custom.css
src/pages/: index.js  index.module.css
src/utils/: translate.js
static/js/: translate.js
(+85 files in other folders)
